--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Created By CodingLab - www.codinglabweb.com -->
+<!-Created By CodingLab www.codinglabweb.com -->
 <html lang="en" dir="ltr">
   <head>
     <meta charset="UTF-8">
@@ -17,12 +17,12 @@
         <div class="user-details">
 
           <ul class="press">
-            <li><button class="learn-more">Catalitium</button></li>
-            <li><button class="learn-more">Email</button></li>
-            <li><button class="learn-more">LinkedIn<i class="fab fa-linkedin"></i></button></li>
-            <li><button class="learn-more">Twitter<i class="fab fa-twitter"></i> </button></li>
-            <li><button class="learn-more">GitHub <i class="fab fa-github"></i> </button></li>
-            <li><button class="learn-more">Blog Posts</button></li>
+            <li><button  class="learn-more"><a href="https://catalitium.github.io/Catalitiumen/">  Catalitium</a></button></li>
+            <li><button class="learn-more"><a href="mailto:catalitium@gmail.com"><i class="fas fa-inbox"></i> Email</a></button></li>
+            <li><button class="learn-more"><a href="https://www.linkedin.com/in/juanpag/" ><i class="fab fa-linkedin"></i> LinkedIn</a></button></li>
+            <li><button class="learn-more"><a href="https://twitter.com/JuanPGarcia95" ><i class="fab fa-twitter"></i> Twitter</a></button></li>
+            <li><button class="learn-more"><a href="https://github.com/Catalitium" ><i class="fab fa-github"></i> GitHub</a></button></li>
+            <li><button class="learn-more"><a href="https://github.com/Catalitium" ><i class="fas fa-address-card"></i> CV</a></button></li>
           </ul>
 
           <div class="input-box">
@@ -39,23 +39,7 @@
           </div>
           <div class="input-box">
             <span class="details">Mensaje</span>
-            <input type="text" placeholder="Número de Teléfono">
-          </div>
-        </div>
-        <div class="gender-details">
-          <input type="radio" name="gender" id="dot-2">
-          <input type="radio" name="gender" id="dot-3">
-          <span class="gender-title">Quieres un Linx gratuito? 🤔</span>
-          <div class="category">
-  
-          <label for="dot-2">
-            <span class="dot two"></span>
-            <span class="gender"><option value="Detectado" >Si! 🤩</option></span>
-          </label>
-          <label for="dot-3">
-            <span class="dot three"></span>
-            <span class="gender"><option value="NO Detectado" >Ahora no</option></span>
-            </label>
+            <input type="text" placeholder="Quieres una web asi gratuita?">
           </div>
         </div>
         <div class="button">
